@@ -90,6 +90,7 @@
   directly contact the server
   - [ ] Implement unit test, at least to be sure a server can't add itself twice
 **** TODO Client work
+     CLOCK: [2016-10-26 mer. 01:12]--[2016-10-26 mer. 01:57] =>  0:45
      CLOCK: [2016-10-25 mar. 03:27]--[2016-10-25 mar. 04:08] =>  0:41
      CLOCK: [2016-10-25 mar. 02:29]--[2016-10-25 mar. 02:37] =>  0:08
      CLOCK: [2016-10-24 lun. 01:21]--[2016-10-24 lun. 02:24] =>  1:03
@@ -164,7 +165,10 @@
   - [X] Find how to draw text in geometry buffer
     may try with a CEGUI::RenderedString
     See how the exampleFramework draw the FPS
-- [ ] There is a segfault when we close the window using system's close button
+- [X] There is a segfault when we close the window using system's close button
+  in =GameEngine::frameRenderingQueued(Ogre::FrameEvent const&)=
+- [ ] Test if resizing the renderwindow works properly
+  see http://www.ogre3d.org/tikiwiki/tiki-index.php?page=Basic+Tutorial+6
 - [ ] Add a NYI layout (A simple dialog with Not Yet Implemented text)
   Possibly with a parameter : unimplemented feature
 - [ ] Must implement a GameState system
